[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | _build
    | buck-out
    | build
    | dist
    | acsylla/_cython
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
source = ["acsylla"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

